k8s/flint_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flint-deployment
  namespace: flint
spec:
  replicas: 2
  selector:
    matchLabels: 
        app: flint
  template:
    metadata:
      labels:
        app: flint
    spec: 
      containers:
        - name: flint
        # 정확한 이미지 명을 넣어주어야 한다.
        # aws의 ecr(image repository 라고 한다) 주소 사용 -> 생성 후 복사 하고 뒤에 :latest 붙여줌
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/flint:latest
          ports:
          # 기존에 80 -> 우린 이제 8080 포트를 사용할 것이므로 8080으로 변경
          - containerPort: 8080
          resources:
          # 최대 할당 가능량
            limits:
              cpu: "1"
              memory: "500Mi"
          # 최소 할당량
            requests: 
              cpu: "0.5"
              memory: "250Mi"
          readinessProbe:
            httpGet:
              path: /flint/checking/healthcheck
              port: 8080
            # 컨테이너 시작 후 지연시간 설정
            initialDelaySeconds: 50
            # 확인 반복 주기
            periodSeconds: 10
            # 요청 타임아웃 설정
            timeoutSeconds: 10
            # 성공 인식 횟수 설정
            successThreshold: 1
            # 연속 실패 횟수 : 연속적으로 3번을 실패하면 건강하지 않은 상태로 판단하여 기존서버 종료시키지 않음
            failureThreshold: 5
